--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.1.3",
     "morgan": "^1.10.0",
-    "node-persist": "^3.1.3",
+    "node-localstorage": "^2.2.1",
     "nodemailer": "^6.9.2",
     "path": "^0.12.7"
   },
