--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "#validation": "./src/validations/index.mjs"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.9",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
-    "helmet": "^6.0.1",
+    "helmet": "^6.2.0",
     "http-status-codes": "^2.2.0",
     "joi": "^17.7.0",
     "joi-oid": "^1.1.2",
