--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "morgan": "^1.10.0",
     "node-localstorage": "^2.2.1",
     "nodemailer": "^6.9.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "puppeteer": "^20.7.1"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
